# gdk_rpc

./: .gitlab-ci.yml  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  build_deps.sh  buster_deps.sh  cargo-config.toml  gdk_rpc.h  ndk.sh  stretch_deps.sh  test.c  test.h  test.sh
src/: coins.rs  constants.rs  errors.rs  lib.rs  network.rs  session.rs  settings.rs  slip77.rs  util.rs  wallet.rs  wally.rs
src/coins/: btc.rs  liq.rs
tests/: test.rs
