[package]
name = "gdk-rpc"
version = "0.1.0"
authors = ["Nadav Ivgi <nadav@shesek.info>"]
license = "(MIT)"
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
bitcoincore-rpc = { git = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc", rev = "2d48109a7dd04b5b4a93abc776488d89e3862680" }
bitcoincore-rpc-json = "0.2"
bitcoin_hashes = { version = "0.3", features = [ "serde" ] }
jsonrpc = "0.10"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
libc = "0.2"
lazy_static = "1.3"
bip39 = "0.6.0-beta"
bitcoin = "0.17"
failure = "0.1"
log = "0.4"
stderrlog = "0.4"
hex = "0.3"
dirs = "1.0"
chrono = "0.4"

[dependencies.secp256k1]
version = "0.12"
features = [ "rand" ]

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1
incremental = false
