[package]
name = "gdk-rpc"
version = "0.1.0"
authors = ["Nadav Ivgi <nadav@shesek.info>"]
license = "(MIT)"
edition = "2018"

[lib]
crate-type = ["dylib"]

[features]
default = []
android_logger = ["android_log"]
stderr_logger = ["stderrlog"]

[dependencies]
bitcoin = "0.18"
bitcoincore-rpc = "0.7.0"
bitcoin_hashes = { version = "0.3", features = [ "serde" ] }
secp256k1 = { version = "0.12", features = [ "rand" ] }
bip39 = "0.6.0-beta"
jsonrpc = "0.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
libc = "0.2"
lazy_static = "1.3"
failure = "0.1"
hex = "0.3"
dirs = "1.0"
chrono = "0.4"
log = "0.4"
stderrlog = { version = "0.4", optional = true }
android_log = { version = "0.1", optional = true }
url = "1.7.2"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1
incremental = false
