[package]
name = "gdk-rpc"
build = "build.rs"
version = "0.1.0"
authors = ["Nadav Ivgi <nadav@shesek.info>"]
license = "(MIT)"
edition = "2018"

[lib]
crate-type = ["dylib"]

[features]
default = ["liquid"]
liquid = ["elements", "liquid-rpc", "slip21"]
android_logger = ["android_log"]
stderr_logger = ["stderrlog"]

[dependencies]
bitcoin = "0.18"
bitcoincore-rpc = "0.7.0"
bitcoin_hashes = { version = "0.3", features = [ "serde" ] }
secp256k1 = { version = "0.12", features = [ "rand" ] }
jsonrpc = "0.11"
rand = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
libc = "0.2"
lazy_static = "1.3"
failure = "0.1"
hex = "0.3"
dirs = "1.0"
chrono = "0.4"
log = "0.4"
stderrlog = { version = "0.4", optional = true }
android_log = { version = "0.1", optional = true }
url = "1.7.2"
backtrace = "0.3"

[dependencies.elements]
version = "0.7.1"
optional = true

[dependencies.liquid-rpc]
git = "https://github.com/stevenroose/rust-liquid-rpc.git"
branch = "master"
optional = true

[dependencies.slip21]
version = "0.1.0"
optional = true

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1
incremental = false
